# lightweight-system-monitor

./: Cargo.toml  LICENSE  README.md  build-minimal-binary.sh
.github/workflows/: ci.yml  release.yml
scripts/: lint.sh
src/: args.rs  cpu_times.rs  main.rs  mem_info.rs
