[package]
edition = "2024"
name = "lightweight-system-monitor"
version = "0.0.3"
description = "A Linux system monitor so lightweight even floating point math is prohibited."
homepage = "https://github.com/Enselic/lightweight-system-monitor"
documentation = "https://docs.rs/lightweight-system-monitor"
readme = "README.md"
keywords = ["system", "monitor", "linux"]
license = "MIT"
repository = "https://github.com/Enselic/lightweight-system-monitor"

[dependencies]
argh = "0.1"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
panic = "abort"
strip = true
